--- a/index.html
+++ b/index.html
@@ -21,15 +21,20 @@
         justify-content: center;
         height: 100vh;
         width: 100%;
-        background-color: #f0f0f0;
+        background-color: #ffffff;
       }
       .loading-spinner {
-        width: 50px;
-        height: 50px;
-        border: 5px solid #f3f3f3;
-        border-top: 5px solid #3498db;
+        width: 40px;
+        height: 40px;
+        border: 3px solid #f3f3f3;
+        border-top: 3px solid #0066FF;
         border-radius: 50%;
         animation: spin 1s linear infinite;
+      }
+      .loading-text {
+        margin-top: 16px;
+        font-family: system-ui, -apple-system, sans-serif;
+        color: #666;
       }
       @keyframes spin {
         0% { transform: rotate(0deg); }
@@ -41,7 +46,7 @@
     <div id="root">
       <div class="loading-screen">
         <div class="loading-spinner"></div>
-        <p>Carregando...</p>
+        <p class="loading-text">Carregando sistema...</p>
       </div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
