--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
       #root {
         width: 100%;
         height: 100vh;
+        display: flex;
+        flex-direction: column;
       }
       .loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 100vh;
-        width: 100%;
         background-color: #ffffff;
+        z-index: 9999;
       }
       .loading-spinner {
         width: 40px;
@@ -40,15 +46,34 @@
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
       }
+      .fade-out {
+        animation: fadeOut 0.3s ease-out forwards;
+      }
+      @keyframes fadeOut {
+        from { opacity: 1; }
+        to { opacity: 0; }
+      }
     </style>
   </head>
   <body>
     <div id="root">
-      <div class="loading-screen">
+      <div class="loading-screen" id="loading-screen">
         <div class="loading-spinner"></div>
         <p class="loading-text">Carregando sistema...</p>
       </div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      // Remove o loading screen quando a aplicação estiver pronta
+      window.addEventListener('load', () => {
+        const loadingScreen = document.getElementById('loading-screen');
+        if (loadingScreen) {
+          loadingScreen.classList.add('fade-out');
+          setTimeout(() => {
+            loadingScreen.style.display = 'none';
+          }, 300);
+        }
+      });
+    </script>
   </body>
 </html>
