--- a/index.html
+++ b/index.html
@@ -10,37 +10,34 @@
     <link rel="manifest" href="/manifest.json" />
     <title>Sistemas Claudio Figueiredo</title>
     <style>
-      #root {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
-      .loading-screen {
+      #root {
+        height: 100vh;
+        width: 100vw;
+      }
+      .preloader {
         position: fixed;
         top: 0;
         left: 0;
-        right: 0;
-        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background: white;
         display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: center;
-        background-color: #ffffff;
+        align-items: center;
         z-index: 9999;
       }
-      .loading-spinner {
+      .spinner {
         width: 40px;
         height: 40px;
-        border: 3px solid #f3f3f3;
-        border-top: 3px solid #0066FF;
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid #3498db;
         border-radius: 50%;
         animation: spin 1s linear infinite;
-      }
-      .loading-text {
-        margin-top: 16px;
-        font-family: system-ui, -apple-system, sans-serif;
-        color: #666;
       }
       @keyframes spin {
         0% { transform: rotate(0deg); }
@@ -49,7 +46,11 @@
     </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="preloader">
+        <div class="spinner"></div>
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
